# musica

./: .gitignore  Cargo.toml  README.md  package-debian.sh
.github/workflows/: release.yml
src/: config.rs  controller.rs  custom.rs  custom_style.rs  dialog.rs  file.rs  main.rs  modal.rs  state.rs
src/backend/: hotkey.rs  mod.rs  state.rs
src/frontend/: dialog.rs  mod.rs
