[package]
name = "musica-app"
version = "0.2.1"
edition = "2024"
license = "MIT"
authors = ["myyrakle <sssang97@naver.com>"]
description = "simple music player"
keywords = ["music", "player", "mp3", "ogg"]
readme = "README.md"
repository = "https://github.com/myyrakle/musica"
documentation = "https://docs.rs/musica/latest/musica"
homepage = "https://github.com/myyrakle/musica/blob/master/README.md"

[dependencies]
anyhow = "1"
iced = { version = "0.14", features = ["advanced", "tokio"] }
native-dialog = "0.9"
rand = "0.10"
rodio = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
